<resources>
    <string name="app_name">WeatherLoc</string>
    <string name="latitude_of_location">Latitude of location</string>
    <string name="enter_here">Enter here...</string>
    <string name="longitude_of_location">Longitude of location</string>
    <string name="fetch_current_weather">Fetch current weather.</string>
    <string name="fetch_5_days_weather">Fetch 5 days weather.</string>
    <string name="fetch_future_weather">Fetch future days weather.</string>
    <string name="enter_the_number_of_days">Enter the number of days</string>
    <string name="get_weather_details">Get Weather Details</string>
    <string name="date">%1$s</string>
    <string name="date_label">Date</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="n_a">N/A</string>
    <string name="cloudiness">Cloudiness: %1$s \%</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="temperature">Temperature</string>
    <string name="feels_like">Feels like</string>
    <string name="temperature_minimum">Temperature minimum</string>
    <string name="temperature_maximum">Temperature maximum</string>
    <string name="humidity">Humidity</string>
    <string name="pressure_sea_level">Pressure sea level</string>
    <string name="pressure_ground_level">Pressure ground level</string>
    <string name="wind_speed">Wind speed</string>
    <string name="cloudiness_">Cloudiness</string>
    <string name="visibility">Visibility</string>
    <string name="celsius_value">%1$s C</string>
    <string name="fahrenheit_value">%1$s F</string>
    <string name="kelvin_value">%1$s K</string>
    <string name="pressure_value">%1$s hPa</string>
    <string name="percent_value">%1$s %2$s</string>
    <string name="meters_value">%1$s meters</string>
    <string name="meters_per_second_value">%1$s meter/second</string>
    <string name="miles_per_hour_value">%1$s miles/hour</string>
    <string name="feature_coming_soon_future">This feature is coming soon for 1 to 16 days weather details.</string>
    <string name="coming_soon">Coming soon!</string>
</resources>