<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/mPbLoader"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/mLlRootLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latitude_of_location" />

        <EditText
            android:id="@+id/mEdtLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_here"
            android:inputType="numberDecimal"
            android:paddingVertical="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/longitude_of_location" />

        <EditText
            android:id="@+id/mEdtLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_here"
            android:inputType="numberDecimal"
            android:paddingVertical="16dp" />

        <RadioGroup
            android:id="@+id/mRgOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/mRbCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/fetch_current_weather" />

            <RadioButton
                android:id="@+id/mRb5Days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fetch_5_days_weather" />

            <RadioButton
                android:id="@+id/mRbFuture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fetch_future_weather" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/mLlFutureDayCountView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/enter_the_number_of_days" />

            <EditText
                android:id="@+id/mEdtDaysCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/enter_here"
                android:inputType="number"
                android:paddingVertical="16dp" />

        </LinearLayout>

        <Button
            android:id="@+id/mBtnFetchWeatherDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:elevation="8dp"
            android:text="@string/get_weather_details"
            android:textAllCaps="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>