<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WeatherListingActivity">

        <LinearLayout
            android:id="@+id/mLlCityView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/city"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/mTvCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="Rain" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mLlLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/mLlCityView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/latitude_of_location"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:layout_editor_absoluteY="128dp" />

            <TextView
                android:id="@+id/mTvLatitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="Rain" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mLlLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mLlLatitude">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/longitude_of_location"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:layout_editor_absoluteY="128dp" />

            <TextView
                android:id="@+id/mTvLongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="Rain" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mLlCountryView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mLlLongitude">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/country"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:layout_editor_absoluteY="128dp" />

            <TextView
                android:id="@+id/mTvCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="Rain" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mLlPopulationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mLlCountryView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Population"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:layout_editor_absoluteY="128dp" />

            <TextView
                android:id="@+id/mTvPopulation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="Rain" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mRvWeatherListing"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mLlPopulationView"
            tools:listitem="@layout/weather_listing_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>